Removed files that should have been ignored. updated java version.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "java.configuration.updateBuildConfiguration": "interactive"
+    "files.exclude": {
+        ".gradle": true,
+        ".vscode": true,
+        "**/.gitkeep": true,
+        "bin": true,
+        "build": true
+    },
+    "java.configuration.updateBuildConfiguration": "automatic"
 }
