--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,12 @@ dependencies {
     
     implementation group: 'org.jsoup', name: 'jsoup', version: '1.17.2'
     // https://mvnrepository.com/artifact/org.graphstream/gs-core
-    implementation group: 'org.graphstream', name: 'gs-core', version: '1.3'
+    implementation group: 'org.graphstream', name: 'gs-core', version: '2.0'
     // https://mvnrepository.com/artifact/org.graphstream/gs-ui
-    implementation group: 'org.graphstream', name: 'gs-ui', version: '1.3'
+    implementation group: 'org.graphstream', name: 'gs-ui-swing', version: '2.0'
 
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.9.+'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 }
 
@@ -24,8 +25,10 @@ test {
     useJUnitPlatform()
 }
 
-sourceCompatibility = 1.17
-targetCompatibility = 1.17
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+}
 
 sourceSets.main.java.srcDirs = ['src']
 sourceSets.main.resources.srcDirs = ['res']
